--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Animal Detection System using YOLO" />
-    <title>🐾 Animal Detection System</title>
+    <meta name="description" content="Object Detection System using YOLO" />
+    <title>🎯 Object Detection System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
